src/test/deca/context/invalid/homemade/tests/test343_this_hors_class.deca
// test invalide de la règle 3.43


{
    int x;
    this.x = x + 1; 
}
